--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/routes/index.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
