--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,7 +20,8 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "stripe": "^18.2.1"
   },
   "description": ""
 }
