--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/neu-mis-info-6150-spring-2023/final-project-group-codelite_lsar#readme",
   "dependencies": {
+    "@mui/icons-material": "^7.1.1",
     "vercel": "^39.0.2"
   }
 }
