--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^5.0.1",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.61.0",
     "scripts": "^0.1.0",
     "start": "^5.1.0",
